[RW-1014][Risk=no] Update to add confirmation modal and new comps (#1063)
* Add confirmation modal and labeling

* Fix the sizing on opening dropdown

* Add confirmation modal and labeling

* Fix the sizing on opening dropdown

* Fix display bug on cohort page

* Fix tests

* PR Comments

--- a/ui/src/app/views/workspace-nav-bar/component.css
+++ b/ui/src/app/views/workspace-nav-bar/component.css
@@ -1,5 +1,8 @@
-/*ng-deep plumbs the styling down into the clarity objects. Necessary for the overflow dropdown*/
-::ng-deep #workspace-top-nav-bar .btn.btn-primary.btn-top {
+/*
+ * ng-deep plumbs the styling down into the clarity objects. Necessary for the overflow dropdown
+ * Adding host keeps it constrained to within the parent.
+ */
+:host::ng-deep #workspace-top-nav-bar .btn.btn-primary.btn-top {
   height: 100%;
   width: 8rem;
   background-color: transparent;
@@ -41,13 +44,29 @@
   background-color: rgba(255, 255, 255, 0.15);
 }
 
-::ng-deep #workspace-top-nav-bar .btn-group-overflow .btn-top.btn-overflow {
+:host::ng-deep #workspace-top-nav-bar .btn.btn-primary.btn-top.btn-dropdown {
   color: white;
   width: 2rem;
   border: none;
   height: 100%;
   position: absolute;
   right: 0;
+  padding: 0;
+  overflow: visible;
+  outline: none;
+}
+
+:host::ng-deep .nav-bar-dropdown.dropdown .dropdown-toggle:not(.btn) {
+  color: white;
+  padding: 0;
+  outline: none;
+  height: 100%;
+  width: 100%;
+}
+
+:host::ng-deep clr-dropdown.nav-bar-dropdown.dropdown {
+  height: 100%;
+  width: 100%;
 }
 
 ::ng-deep #workspace-top-nav-bar .btn-top.btn-overflow:hover {
@@ -58,16 +77,29 @@
  * Clarity's overflow elements apply a static position on click, so we needed to
  * override that.
  */
-::ng-deep #workspace-top-nav-bar.btn-group>.btn-group-overflow {
+:host::ng-deep #workspace-top-nav-bar.btn-group>.btn-group-overflow {
   position: absolute !important;
   right: 0;
   height: 100%;
   width: 5rem
 }
 
-::ng-deep #workspace-top-nav-bar .dropdown-menu {
-  right: 0;
-  width: 2rem;
+:host::ng-deep #workspace-top-nav-bar .dropdown-menu {
+  width: 8rem;
+  position: absolute;
+  /*
+   * The important labels are necessary to not accidentally create space off the
+   * edge of the page
+   */
+  left: -120px !important;
+  top: 55px !important;
+}
+
+label.dropdown-header {
+  font-size: 14px;
+  color: #262262;
+  font-weight: 500;
+  text-transform: none;
 }
 
 .btn-group {
