--- a/ui/src/app/views/workspace-edit/component.html
+++ b/ui/src/app/views/workspace-edit/component.html
@@ -267,7 +267,7 @@
                 Clone Workspace
               </button>
             </ng-container>
-            <div *ngIf="!allowSave" class="tooltip-text">
+            <div *ngIf="!allowSave && !savingWorkspace" class="tooltip-text">
               Missing Required Fields:
               <ul>
                 <li *ngIf="isBlank(workspace.name)">Name</li>
