RW-1028 create custom class for sorting string columns as ints

--- a/ui/src/app/cohort-review/detail-all-events/detail-all-events.component.html
+++ b/ui/src/app/cohort-review/detail-all-events/detail-all-events.component.html
@@ -4,6 +4,7 @@
 
   <clr-dg-column *ngFor="let col of columns"
     [clrDgField]="col.notField ? null : col.name"
+    [clrDgSortBy]="col.name === 'numMentions' ? stringToIntComparator : null"
     [ngClass]="col.classNames"
     >
     {{ col.displayName }}
