[RW-1085][Risk=no] Fix bug in tooltip workspace creation (#1067)
* [RW-1085][Risk=no] Fix bug in tooltip workspace creation

* Separate out isValidWorkspace

--- a/ui/src/app/views/workspace-edit/component.html
+++ b/ui/src/app/views/workspace-edit/component.html
@@ -267,7 +267,7 @@
                 Clone Workspace
               </button>
             </ng-container>
-            <div *ngIf="!allowSave" class="tooltip-text">
+            <div *ngIf="!isValidWorkspace" class="tooltip-text">
               Missing Required Fields:
               <ul>
                 <li *ngIf="isBlank(workspace.name)">Name</li>
