--- a/ui/src/app/cohort-review/detail-all-events/detail-all-events.component.html
+++ b/ui/src/app/cohort-review/detail-all-events/detail-all-events.component.html
@@ -4,7 +4,7 @@
 
   <clr-dg-column *ngFor="let col of columns"
     [clrDgField]="col.notField ? null : col.name"
-    [clrDgSortBy]="col.name === 'numMentions' ? stringToIntComparator : null"
+    [clrDgSortBy]="sortByColumn(col.name)"
     [ngClass]="col.classNames"
     >
     {{ col.displayName }}
