--- a/ui/src/app/cohort-search/modal/modal.component.css
+++ b/ui/src/app/cohort-search/modal/modal.component.css
@@ -23,7 +23,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   width: 80%;
-  height: 80%;
+  /*height: 80%;*/
   background-color: white;
   border-radius: 4px;
   display: flex;
@@ -32,12 +32,14 @@
 }
 
 .title-bar {
-  box-shadow: 0 0.12rem 0.125rem 0 #d7d7d7;
+  box-shadow: 0 0.12rem 0.125rem 0 #216FB4;
   margin-bottom: 0.5rem;
-  padding: 0.2rem 0.4rem;
+  padding: 0rem 1rem;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-end;
+  height:1.4rem;
+  margin-top: 0.5rem;
 }
 
 .title {
@@ -55,7 +57,13 @@
   width: 1px;
   border: 1px solid #979797;
 }
+.nav-link.active{
+  -webkit-box-shadow: inset 0 -7px 0 #007cbb;
+}
 
+/*.nav-link.hover{*/
+  /*-webkit-box-shadow: inset 0 -7px 0 #007cbb;*/
+/*}*/
 button.active {
   color: rgb(0, 74, 112);
 }
@@ -70,13 +78,13 @@ button.active {
 
 .content {
   flex: 1;
-  padding: 0.2rem 0.4rem;
+  /*padding: 0.2rem 0.4rem;*/
   overflow: auto;
 }
 
 .footer {
   margin-top: 0.5rem;
-  padding: 0.2rem 0.4rem;
+  padding: 0.45rem 0.4rem;
   display: flex;
   justify-content: flex-end;
 }
@@ -109,20 +117,47 @@ button.active {
 .panel-left.show {
   display: block;
   animation: fadeEffect 1s;
+  padding-left: 1rem;
+  max-height:30rem;
+  min-height:30rem;
+  overflow-y:auto;
+}
+.panel-right-container{
+  width: 100%;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top:.5rem;
+  background-color: rgb(241, 242, 242) ;
 }
 
 .panel-right.selected {
   width: 14rem;
   min-width: 14rem;
-  border: 2px solid #d7d7d7;
+  border: 2px solid #262262;
   height: 100%;
   border-radius: 5px;
   overflow-y: auto;
   overflow-x: hidden;
+  min-height: 26.88rem;
+  background-color: white;
+}
+
+.title-margin {
+  margin-left: 0px;
+  margin-right: 0px;
+  width: 100%;
+}
+
+.title-margin .padding-zero{
+ padding-left: 0rem;
+  padding-right: 0rem;
 }
 
 h5.selection-title {
   margin-top: 0;
+  color: #262262;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 @media all and (max-width: 900px) {
