--- a/ui/src/app/cohort-search/modal/modal.component.html
+++ b/ui/src/app/cohort-search/modal/modal.component.html
@@ -1,104 +1,153 @@
 <div class="crit-modal-container" [class.show]="open">
   <div class="crit-modal-content">
+    <div class="container title-margin">
+      <div class="row">
+        <div class="col col-lg-9 padding-zero" [ngClass]="{'col col-lg-12': ctype === 'demo'}">
 
-    <div class="title-bar">
-      <div class="btn-group btn-link">
-        <div class="title">{{ title }}</div>
-        <ng-container *ngIf="ctype !== 'demo'">
-          <div class="vbar"></div>
-          <button type="button" class="btn"
-            [class.active]="mode === 'tree'"
-            (click)="mode = 'tree'">
-            Criteria Tree
-          </button>
-          <button type="button" class="btn"
-            *ngIf="ctype !== 'pm'"
-            [class.active]="mode === 'modifiers'"
-            (click)="mode = 'modifiers'">
-            Modifiers
-          </button>
-          <!--
-          <button type="button" class="btn"
-            [class.active]="mode === 'summary'"
-            (click)="mode = 'summary'">
-            Summary
-          </button>
-          -->
-        </ng-container>
-      </div>
-      <button
-        (click)="cancel()"
-        class="btn btn-link btn-icon">
-        <clr-icon class="close-button" size="24" shape="close"></clr-icon>
-      </button>
+
+          <div class="title-bar">
+            <clr-tabs class="test">
+              <!--*ngIf="title ===!'Physical Measurements' "-->
+
+              <clr-tab *ngIf="title !=='Physical Measurements' ">
+                <button clrTabLink (click)="mode = 'tree'">{{ title }}</button>
+                <ng-template clrIfActive="{{title}}"></ng-template>
+              </clr-tab>
+              <clr-tab *ngIf="title ==='Physical Measurements' ">
+                <button clrTabLink *ngIf="attributesNode.size === 0" (click)="mode = 'tree'">{{ title }}</button>
+                <ng-template clrIfActive="{{title}}"></ng-template>
+                <button clrTabLink *ngIf="attributesNode.size > 0">{{attributesNode.get('name')}}</button>
+              </clr-tab>
+              <!--<div class="vbar"></div>-->
+              <div *ngIf="ctype !== 'demo'">
+                <clr-tab  *ngIf="ctype !== 'pm'">
+                  <button (click)="mode = 'modifiers'" clrTabLink>Modifiers</button>
+                  <ng-template *ngIf="ctype !== 'pm'" [(clrIfActive)]="modifiers" ></ng-template>
+                </clr-tab>
+
+              </div>
+
+              <!--<div *ngIf="title; else login">-->
+                <!--The user is logged in.-->
+              <!--</div>-->
+              <!--<ng-template #login>Please login to continue.</ng-template>-->
+              <!--<clr-tab>-->
+              <!--<button clrTabLink>Cloud</button>-->
+              <!--<ng-template [(clrIfActive)]="cloudActive">-->
+              <!--<clr-tab-content>-->
+              <!--...-->
+              <!--</clr-tab-content>-->
+              <!--</ng-template>-->
+              <!--</clr-tab>-->
+            </clr-tabs>
+            <!--<div class="btn-group btn-link">-->
+              <!--<div class="title">{{ title }}</div>-->
+                <!--<ng-container *ngIf="ctype !== 'demo'">-->
+                  <!--<div class="vbar"></div>-->
+                  <!--<button type="button" class="btn"-->
+                          <!--[class.active]="mode === 'tree'"-->
+                          <!--(click)="mode = 'tree'">-->
+                    <!--Criteria Tree-->
+                  <!--</button>-->
+                  <!--<button type="button" class="btn"-->
+                          <!--*ngIf="ctype !== 'pm'"-->
+                          <!--[class.active]="mode === 'modifiers'"-->
+                          <!--(click)="mode = 'modifiers'">-->
+                    <!--Modifiers-->
+                  <!--</button>-->
+                <!--&lt;!&ndash;-->
+                <!--<button type="button" class="btn"-->
+                  <!--[class.active]="mode === 'summary'"-->
+                  <!--(click)="mode = 'summary'">-->
+                  <!--Summary-->
+                <!--</button>-->
+                <!--&ndash;&gt;-->
+              <!--</ng-container>-->
+            <!--</div>-->
+            <button *ngIf="attributesNode.size > 0"
+                    (click)="back()"
+                    class="btn btn-link btn-icon">
+              <clr-icon class="close-button" size="24" shape="close"></clr-icon>
+            </button>
+          </div>
+          <div class="content" *ngIf="open">
+            <ng-container [ngSwitch]="ctype">
+              <crit-demographics *ngSwitchCase="'demo'"
+                                 (cancel)="cancel()"
+                                 (finish)="finish()">
+              </crit-demographics>
+
+              <ng-container *ngSwitchDefault>
+                <div id="tree" class="panel" [class.show]="mode === 'tree' || mode === 'modifiers' || mode === 'attributes'">
+                  <!-- Tree Page -->
+                  <div class="panel-left" [class.show]="mode === 'tree'">
+                    <crit-tree [node]="rootNode"></crit-tree>
+                  </div>
+                  <!-- Modifiers Page -->
+                  <div class="panel-left" [class.show]="mode === 'modifiers'">
+                    <crit-modifier-page></crit-modifier-page>
+                  </div>
+                  <!-- Attributes Page -->
+                  <div class="panel-left" [class.show]="mode === 'attributes'">
+                    <crit-attributes-page [node]="attributesNode"></crit-attributes-page>
+                  </div>
+                </div>
+
+                <!-- Summary Page
+                <div id="summary" class="panel" [class.show]="mode === 'summary'">
+                  Summary
+                </div>
+                -->
+              </ng-container>
+
+            </ng-container>
+          </div>
+        </div>
+        <div class="col col-lg-3 padding-zero" *ngIf="ctype !== 'demo'">
+          <div class="content" *ngIf="open">
+            <ng-container [ngSwitch]="ctype">
+              <ng-container *ngSwitchDefault>
+                <div class="panel-right-container">
+                  <h5 class="selection-title">{{ selectionTitle }}</h5>
+                  <div class="panel-right selected">
+                    <crit-selection-info
+                            *ngFor="let parameter of (selection$ | async); let i = index"
+                            [index]="i"
+                            [parameter]="parameter">
+                    </crit-selection-info>
+                  </div>
+                  <div *ngIf="ctype !== 'demo'" class="footer">
+                    <button type="button"
+                            (click)="cancel()"
+                            class="btn btn-link">
+                      Cancel
+                    </button>
+                    <!--<button *ngIf="hasNextPage"-->
+                            <!--[disabled]="noSelection"-->
+                            <!--(click)="nextPage()"-->
+                            <!--type="button"-->
+                            <!--class="btn btn-secondary">-->
+                      <!--Next-->
+                    <!--</button>-->
+                    <button type="button"
+                            [disabled]="noSelection"
+                            (click)="finish()"
+                            class="btn btn-primary">
+                      Finish
+                    </button>
+                  </div>
+              </div>
+              </ng-container>
+            </ng-container>
+          </div>
+
+        </div>
     </div>
-
     <!-- Wrapping the content in an ngIf makes sure that the various forms
       included in the content are destroyed and recreated each time the modal
       is opened / closed; i.e. modal state doesn't "leak" from one "instance"
       to another
     -->
-    <div class="content" *ngIf="open">
-      <ng-container [ngSwitch]="ctype">
-        <crit-demographics *ngSwitchCase="'demo'"
-          (cancel)="cancel()"
-          (finish)="finish()">
-        </crit-demographics>
 
-        <ng-container *ngSwitchDefault>
-          <div id="tree" class="panel" [class.show]="mode === 'tree' || mode === 'modifiers' || mode === 'attributes'">
-            <!-- Tree Page -->
-            <div class="panel-left" [class.show]="mode === 'tree'">
-              <crit-tree [node]="rootNode"></crit-tree>
-            </div>
-            <!-- Modifiers Page -->
-            <div class="panel-left" [class.show]="mode === 'modifiers'">
-              <crit-modifier-page></crit-modifier-page>
-            </div>
-            <!-- Attributes Page -->
-            <div class="panel-left" [class.show]="mode === 'attributes'">
-              <crit-attributes-page [node]="attributesNode"></crit-attributes-page>
-            </div>
-            <div class="panel-right selected">
-              <h5 class="selection-title">{{ selectionTitle }}</h5>
-              <crit-selection-info
-                *ngFor="let parameter of (selection$ | async); let i = index"
-                [index]="i"
-                [parameter]="parameter">
-              </crit-selection-info>
-            </div>
-          </div>
 
-          <!-- Summary Page
-          <div id="summary" class="panel" [class.show]="mode === 'summary'">
-            Summary
-          </div>
-          -->
-        </ng-container>
-
-      </ng-container>
-    </div>
-
-    <div *ngIf="ctype !== 'demo'" class="footer">
-      <button type="button"
-        (click)="cancel()"
-        class="btn btn-link">
-        Cancel
-      </button>
-      <button *ngIf="hasNextPage"
-        [disabled]="noSelection"
-        (click)="nextPage()"
-        type="button"
-        class="btn btn-secondary"
-        >
-        Next
-      </button>
-      <button type="button"
-        [disabled]="noSelection"
-        (click)="finish()"
-        class="btn btn-primary">
-        Finish
-      </button>
-    </div>
-  </div>
 </div>
