--- a/ui/src/app/cohort-search/search-bar/search-bar.component.html
+++ b/ui/src/app/cohort-search/search-bar/search-bar.component.html
@@ -1,6 +1,7 @@
 <div class="search-box">
   <clr-icon shape="search"></clr-icon>
   <input clrInput
+         class="no-border"
    type="text"
    name="searchTerm"
    [(ngModel)]="searchTerm"
