RW-1088, RW-1089, RW-1090 skinning to style guide

--- a/ui/src/app/cohort-search/search-bar/search-bar.component.html
+++ b/ui/src/app/cohort-search/search-bar/search-bar.component.html
@@ -2,6 +2,7 @@
   <div class="search-box">
     <clr-icon shape="search"></clr-icon>
     <input clrInput
+     class="no-border"
      type="text"
      name="searchTerm"
      [(ngModel)]="searchTerm"
