--- a/ui/src/app/cohort-search/attributes-page/attributes-page.component.html
+++ b/ui/src/app/cohort-search/attributes-page/attributes-page.component.html
@@ -1,6 +1,6 @@
-<div class="title">
-  {{node.get('name','')}}
-</div>
+<!--<div class="title">-->
+ <!--hi  {{node.get('name','')}}-->
+<!--</div>-->
 <div *ngIf="negativeAlert" class="alert alert-danger alert-sm">
   <div class="alert-items">
     <div class="alert-item static">
@@ -13,47 +13,121 @@
 <form *ngIf="node.size" #attrForm="ngForm" (ngSubmit)="addAttrs(attrForm)">
   <section class="form-block">
     <div *ngFor="let attr of attrs; let i = index">
-      <div class="form-group">
+      <div class="attr-name-color">
         <label>{{attr.name}}</label>
-        <div class="select">
-          <select [name]="'operator'+i" [(ngModel)]="attr.operator" (ngModelChange)="selectChange(i, $event)" required>
-            <option value=""></option>
-            <option value="EQUAL">Equals</option>
-            <option value="GREATER_THAN_OR_EQUAL_TO">Greater than or Equal to</option>
-            <option value="LESS_THAN_OR_EQUAL_TO">Less than or Equal to</option>
-            <option value="BETWEEN">Between</option>
-            <option value="ANY">Any</option>
-          </select>
+      </div>
+
+      <div class="container">
+        <div class="row" style="padding-top:.5rem">
+          <div class="col col-lg-4 ">
+            <div class="select">
+
+              <!--<clr-dropdown>-->
+              <!--<button type="button" class="btn selection-button" clrDropdownTrigger>-->
+              <!--Select Criteria <clr-icon shape="caret down"></clr-icon>-->
+              <!--</button>-->
+              <!--<clr-dropdown-menu clrPosition="bottom-left" *clrIfOpen>-->
+              <!--&lt;!&ndash;<h4 class="dropdown-header">Program Data</h4>&ndash;&gt;-->
+              <!--<button-->
+              <!--*ngFor="let criteria of options"-->
+              <!--[name]="'operator'+i"-->
+              <!--[(ngModel)]="attr.operands[0]"-->
+              <!--(click)="selectChange(i, criteria)"-->
+              <!--class="dropdown-item"-->
+              <!--type="button"-->
+              <!--clrDropdownItem>{{criteria}}</button>-->
+              <!--<div class="dropdown-divider"></div>-->
+              <!--</clr-dropdown-menu>-->
+              <!--</clr-dropdown>-->
+
+              <select class="dropdown-container" [name]="'operator'+i" [(ngModel)]="attr.operator" (ngModelChange)="selectChange(i, $event)" required>
+                <option value="EQUAL">''</option>
+                <option value="EQUAL">Equals</option>
+                <option value="GREATER_THAN_OR_EQUAL_TO">Greater than or Equal to</option>
+                <option value="LESS_THAN_OR_EQUAL_TO">Less than or Equal to</option>
+                <option value="BETWEEN">Between</option>
+                <option value="ANY">Any</option>
+              </select>
+            </div>
+          </div>
+          <div class="col col-lg-2">
+            <div *ngIf="attrForm.value['operator'+i] !== 'ANY'" class="form-group range-container">
+              <input class="number-container" type="number" min="0" [name]="'valueA'+i" [(ngModel)]="attr.operands[0]" (ngModelChange)="inputChange()" required>
+              <span *ngIf="units[node.get('subtype')]">{{units[node.get('subtype')]}}</span>
+            </div>
+          </div>
+          <div class="col col-lg-2" >
+            <div style="padding-left:0rem" *ngIf="attrForm.value['operator'+i] === 'BETWEEN'" class="form-group">
+              <div>and</div>
+            </div>
+          </div>
+          <div class="col col-lg-3 ">
+            <div *ngIf="attrForm.value['operator'+i] === 'BETWEEN'" class="form-group range-container">
+              <input class="number-container" type="number" min="0" [name]="'valueB'+i" [(ngModel)]="attr.operands[1]" (ngModelChange)="inputChange()" required>
+              <span>{{units[node.get('subtype')]}}</span>
+            </div>
+          </div>
         </div>
       </div>
-      <div *ngIf="attrForm.value['operator'+i] !== 'ANY'" class="form-group">
-        <input type="number" min="0" [name]="'valueA'+i" [(ngModel)]="attr.operands[0]" (ngModelChange)="inputChange()" required>
-        <span *ngIf="units[node.get('subtype')]">{{units[node.get('subtype')]}}</span>
-      </div>
-      <div *ngIf="attrForm.value['operator'+i] === 'BETWEEN'" class="form-group">
-        <div>and</div>
-      </div>
-      <div *ngIf="attrForm.value['operator'+i] === 'BETWEEN'" class="form-group">
-        <input type="number" min="0" [name]="'valueB'+i" [(ngModel)]="attr.operands[1]" (ngModelChange)="inputChange()" required>
-        <span>{{units[node.get('subtype')]}}</span>
+
+
+
+    </div>
+
+    <!--changes end-->
+
+    <div class="container count-preview ">
+      <div class="row">
+        <div class="col-lg-2 ">
+          <button type="button"
+                  class="btn calculate-btn"
+                  [disabled]="!attrForm.valid || negativeAlert"
+                  (click)="requestPreview(attrForm)">
+            Calculate
+
+          </button>
+        </div>
+        <div class="spin-top-padding">
+          <span *ngIf="preview.get('requesting')" class="spinner spinner-inline"> Loading...   </span>
+        </div>
+        <div class="col-lg-8 text-padding" *ngIf="preview.get('count')">
+          <div class="result-text">
+            Results
+          </div>
+           <div >
+              Number Participants:
+             <span class="text-bold" *ngIf="!preview.get('requesting')">
+             {{ preview.get('count', 0) }}
+             </span>
+
+          </div>
+        </div>
+        <div class="col-lg-2" *ngIf="preview.get('count')">
+          <button class="btn add-button " type="submit" [disabled]="!attrForm.valid || negativeAlert"> ADD THIS RESULT</button>
+        </div>
       </div>
     </div>
-    <div class="count-preview">
-      <button type="button"
-              class="btn"
-              [disabled]="!attrForm.valid || negativeAlert"
-              (click)="requestPreview(attrForm)">
-        Calculate
-      </button>
-      Number Participants:
-      <span *ngIf="!preview.get('requesting')">
-        {{ preview.get('count', 0) | number }}
-      </span>
-      <span *ngIf="preview.get('requesting')" class="spinner spinner-inline">
-        Loading...
-      </span>
-    </div>
-    <button class="btn btn-link" type="button" (click)="cancel()">Cancel</button>
-    <button class="btn btn-primary" type="submit" [disabled]="!attrForm.valid || negativeAlert">Add Item</button>
+
+
+    <!--<div class="count-preview">-->
+      <!--<button type="button"-->
+              <!--class="btn calculate-btn"-->
+              <!--[disabled]="!attrForm.valid || negativeAlert"-->
+              <!--(click)="requestPreview(attrForm)">-->
+        <!--Calculate-->
+      <!--</button>-->
+      <!--<span *ngIf="preview.get('count')">-->
+        <!--Number Participants:-->
+      <!--</span>-->
+
+      <!--&lt;!&ndash;<span *ngIf="!preview.get('requesting')">&ndash;&gt;-->
+        <!--&lt;!&ndash;{{ preview.get('count', 0) }}&ndash;&gt;-->
+      <!--&lt;!&ndash;</span>&ndash;&gt;-->
+      <!--<span *ngIf="preview.get('requesting')" class="spinner spinner-inline">-->
+        <!--Loading...-->
+      <!--</span>-->
+    <!--</div>-->
+    <!--<button class="btn btn-link" type="button" (click)="cancel()">Cancel</button>-->
+    <!--<button class="btn btn-primary" type="submit" [disabled]="!attrForm.valid || negativeAlert">Add Item</button>-->
   </section>
 </form>
