--- a/ui/src/app/cohort-search/modal/modal.component.html
+++ b/ui/src/app/cohort-search/modal/modal.component.html
@@ -2,13 +2,9 @@
   <div class="crit-modal-content">
     <div class="container title-margin">
       <div class="row">
-        <div class="col col-lg-9 padding-zero" [ngClass]="{'col col-lg-12': ctype === 'demo'}">
-
-
+        <div class="col col-lg-9 padding-zero" [ngClass]="{'col col-lg-12': ctype === criteriaTypes.DEMO}">
           <div class="title-bar">
             <clr-tabs class="test">
-              <!--*ngIf="title ===!'Physical Measurements' "-->
-
               <clr-tab *ngIf="title !=='Physical Measurements' ">
                 <button clrTabLink (click)="mode = 'tree'">{{ title }}</button>
                 <ng-template clrIfActive="{{title}}"></ng-template>
@@ -19,51 +15,19 @@
                 <button clrTabLink *ngIf="attributesNode.size > 0">{{attributesNode.get('name')}}</button>
               </clr-tab>
               <!--<div class="vbar"></div>-->
-              <div *ngIf="ctype !== 'demo'">
-                <clr-tab  *ngIf="ctype !== 'pm'">
+              <div *ngIf="ctype !== criteriaTypes.DEMO">
+                <clr-tab  *ngIf="ctype !== criteriaTypes.PM">
                   <button (click)="mode = 'modifiers'" clrTabLink>Modifiers</button>
-                  <ng-template *ngIf="ctype !== 'pm'" [(clrIfActive)]="modifiers" ></ng-template>
+                  <ng-template *ngIf="ctype !== criteriaTypes.PM" [(clrIfActive)]="modifiers" ></ng-template>
                 </clr-tab>
-
               </div>
-
-              <!--<div *ngIf="title; else login">-->
-                <!--The user is logged in.-->
-              <!--</div>-->
-              <!--<ng-template #login>Please login to continue.</ng-template>-->
-              <!--<clr-tab>-->
-              <!--<button clrTabLink>Cloud</button>-->
-              <!--<ng-template [(clrIfActive)]="cloudActive">-->
-              <!--<clr-tab-content>-->
-              <!--...-->
-              <!--</clr-tab-content>-->
-              <!--</ng-template>-->
-              <!--</clr-tab>-->
             </clr-tabs>
-            <!--<div class="btn-group btn-link">-->
-              <!--<div class="title">{{ title }}</div>-->
-                <!--<ng-container *ngIf="ctype !== 'demo'">-->
-                  <!--<div class="vbar"></div>-->
-                  <!--<button type="button" class="btn"-->
-                          <!--[class.active]="mode === 'tree'"-->
-                          <!--(click)="mode = 'tree'">-->
-                    <!--Criteria Tree-->
-                  <!--</button>-->
-                  <!--<button type="button" class="btn"-->
-                          <!--*ngIf="ctype !== 'pm'"-->
-                          <!--[class.active]="mode === 'modifiers'"-->
-                          <!--(click)="mode = 'modifiers'">-->
-                    <!--Modifiers-->
-                  <!--</button>-->
-                <!--&lt;!&ndash;-->
-                <!--<button type="button" class="btn"-->
-                  <!--[class.active]="mode === 'summary'"-->
-                  <!--(click)="mode = 'summary'">-->
-                  <!--Summary-->
-                <!--</button>-->
-                <!--&ndash;&gt;-->
-              <!--</ng-container>-->
-            <!--</div>-->
+            <div *ngIf="ctype === domainType[domainType.DRUG]">
+              <a href="https://mor.nlm.nih.gov/RxNav/" target="_blank">
+                Explore
+              </a>
+              drugs by brand names outside of AoU
+            </div>
             <button *ngIf="attributesNode.size > 0"
                     (click)="back()"
                     class="btn btn-link btn-icon">
@@ -72,7 +36,7 @@
           </div>
           <div class="content" *ngIf="open">
             <ng-container [ngSwitch]="ctype">
-              <crit-demographics *ngSwitchCase="'demo'"
+              <crit-demographics *ngSwitchCase="criteriaTypes.DEMO"
                                  (cancel)="cancel()"
                                  (finish)="finish()">
               </crit-demographics>
@@ -92,18 +56,12 @@
                     <crit-attributes-page [node]="attributesNode"></crit-attributes-page>
                   </div>
                 </div>
-
-                <!-- Summary Page
-                <div id="summary" class="panel" [class.show]="mode === 'summary'">
-                  Summary
-                </div>
-                -->
               </ng-container>
-
             </ng-container>
           </div>
         </div>
-        <div class="col col-lg-3 padding-zero" *ngIf="ctype !== 'demo'">
+
+        <div class="col col-lg-3 padding-zero" *ngIf="ctype !== criteriaTypes.DEMO">
           <div class="content" *ngIf="open">
             <ng-container [ngSwitch]="ctype">
               <ng-container *ngSwitchDefault>
@@ -116,18 +74,18 @@
                             [parameter]="parameter">
                     </crit-selection-info>
                   </div>
-                  <div *ngIf="ctype !== 'demo'" class="footer">
+                  <div *ngIf="ctype !== criteriaTypes.DEMO" class="footer">
                     <button type="button"
                             (click)="cancel()"
                             class="btn btn-link">
                       Cancel
                     </button>
                     <!--<button *ngIf="hasNextPage"-->
-                            <!--[disabled]="noSelection"-->
-                            <!--(click)="nextPage()"-->
-                            <!--type="button"-->
-                            <!--class="btn btn-secondary">-->
-                      <!--Next-->
+                    <!--[disabled]="noSelection"-->
+                    <!--(click)="nextPage()"-->
+                    <!--type="button"-->
+                    <!--class="btn btn-secondary">-->
+                    <!--Next-->
                     <!--</button>-->
                     <button type="button"
                             [disabled]="noSelection"
@@ -136,18 +94,13 @@
                       Finish
                     </button>
                   </div>
-              </div>
+                </div>
               </ng-container>
             </ng-container>
           </div>
 
         </div>
+      </div>
     </div>
-    <!-- Wrapping the content in an ngIf makes sure that the various forms
-      included in the content are destroyed and recreated each time the modal
-      is opened / closed; i.e. modal state doesn't "leak" from one "instance"
-      to another
-    -->
-
-
+  </div>
 </div>
