[rw-1047][risk=no] Add stigmatization page

--- a/ui/src/app/views/workspace-edit/component.html
+++ b/ui/src/app/views/workspace-edit/component.html
@@ -240,7 +240,10 @@
           </clr-checkbox>
           <div>
             <div class="section-text">
-              {{researchPurposeItems.requestReview.longDescription}}
+              I am concerned about potential <a (click)="openStigmatizationLink()">stigmatization</a>
+              of research participants. I would like the All of Us Resource Access Board (RAB) to
+              review my Research Purpose. (This will not prevent you from creating a workspace and
+              proceeding.)
             </div>
           </div>
         </div>
