--- a/ui/src/app/cohort-search/attributes-page/attributes-page.component.html
+++ b/ui/src/app/cohort-search/attributes-page/attributes-page.component.html
@@ -22,32 +22,34 @@
           <div class="col col-lg-4 ">
             <div class="select">
 
-              <!--<clr-dropdown>-->
-              <!--<button type="button" class="btn selection-button" clrDropdownTrigger>-->
-              <!--Select Criteria <clr-icon shape="caret down"></clr-icon>-->
-              <!--</button>-->
-              <!--<clr-dropdown-menu clrPosition="bottom-left" *clrIfOpen>-->
-              <!--&lt;!&ndash;<h4 class="dropdown-header">Program Data</h4>&ndash;&gt;-->
-              <!--<button-->
-              <!--*ngFor="let criteria of options"-->
-              <!--[name]="'operator'+i"-->
-              <!--[(ngModel)]="attr.operands[0]"-->
-              <!--(click)="selectChange(i, criteria)"-->
-              <!--class="dropdown-item"-->
-              <!--type="button"-->
-              <!--clrDropdownItem>{{criteria}}</button>-->
-              <!--<div class="dropdown-divider"></div>-->
-              <!--</clr-dropdown-menu>-->
-              <!--</clr-dropdown>-->
+              <clr-dropdown>
+                <button type="button" class="btn btn-outline" clrDropdownTrigger>
+                  <span *ngIf="attr.operator === ''">Select Operator</span>
+                  <span *ngIf="attr.operator !== ''">{{dropdowns.selected[i]}}</span>
+                  <clr-icon shape="caret down"></clr-icon>
+                </button>
+                <clr-dropdown-menu clrPosition="bottom-left" *clrIfOpen>
+                <!--<h4 class="dropdown-header">Program Data</h4>-->
+                  <button
+                  *ngFor="let option of options"
+                  [name]="'operator'+i"
+                  (click)="selectChange(i, option)"
+                  class="dropdown-item"
+                  type="button"
+                  clrDropdownItem>{{option.name}}</button>
+                </clr-dropdown-menu>
+              </clr-dropdown>
 
-              <select class="dropdown-container" [name]="'operator'+i" [(ngModel)]="attr.operator" (ngModelChange)="selectChange(i, $event)" required>
-                <option value="EQUAL">''</option>
-                <option value="EQUAL">Equals</option>
-                <option value="GREATER_THAN_OR_EQUAL_TO">Greater than or Equal to</option>
-                <option value="LESS_THAN_OR_EQUAL_TO">Less than or Equal to</option>
-                <option value="BETWEEN">Between</option>
-                <option value="ANY">Any</option>
-              </select>
+              <input type="hidden" [name]="'operator'+i" [ngModel]="attr.operator" required>
+
+              <!--<select class="dropdown-container" [name]="'operator'+i" [(ngModel)]="attr.operator" (ngModelChange)="selectChange(i, $event)" required>-->
+                <!--<option value="">''</option>-->
+                <!--<option value="EQUAL">Equals</option>-->
+                <!--<option value="GREATER_THAN_OR_EQUAL_TO">Greater than or Equal to</option>-->
+                <!--<option value="LESS_THAN_OR_EQUAL_TO">Less than or Equal to</option>-->
+                <!--<option value="BETWEEN">Between</option>-->
+                <!--<option value="ANY">Any</option>-->
+              <!--</select>-->
             </div>
           </div>
           <div class="col col-lg-2">
