--- a/ui/src/app/cohort-search/overview/overview.component.html
+++ b/ui/src/app/cohort-search/overview/overview.component.html
@@ -72,16 +72,23 @@
         [class.show]="(name.dirty || name.touched) && cohortForm.invalid">
         <em>*A Cohort Name is Required</em>
       </label>
-      <input
-        name="name"
-        id="name-control"
-        class="control"
-        placeholder="Cohort Name"
-        formControlName="name"
-        type="text"
-        [class.invalid]="(name.dirty || name.touched) && cohortForm.invalid"
-        (input)="showConflictError = false"
-        autofocus>
+      <div class="name-area" style="position: relative;">
+        <input
+          name="name"
+          id="name-control"
+          class="control"
+          placeholder="Cohort Name"
+          formControlName="name"
+          type="text"
+          [class.invalid]="(name.dirty || name.touched) && cohortForm.invalid"
+          (input)="showConflictError = false"
+          [ngClass]="{alreadyTaken: showConflictError}"
+          autofocus>
+        <clr-icon shape="warning-standard" class="warning-standard is-solid" *ngIf="showConflictError"></clr-icon>
+        <div *ngIf="showConflictError" class="error">
+          {{name.value}} already exists. Please choose another name.
+        </div>
+      </div>
       <textarea
         name="description"
         id="description-control"
@@ -94,9 +101,6 @@
   </div>
 
   <div class="modal-footer">
-    <div *ngIf="showConflictError" class="error">
-      {{name.value}} already exists
-    </div>
     <button
       type="button"
       class="btn btn-link"
