--- a/ui/src/app/views/workspace/component.html
+++ b/ui/src/app/views/workspace/component.html
@@ -1,7 +1,7 @@
 <div class="help-tip" *ngIf="showTip">
   <div class="help-tip-title">Welcome to your workspace!</div>
   <div class="help-tip-text">Define a subset of the participant data by creating a cohort. Create a notebook to access and analyze your cohorts in Python.</div>
-  <div (click)="dismissTip()" style="cursor: pointer"><clr-icon shape="times-circle" size="32px" style="position: absolute; top: 1.35rem; right: 1rem;height: 32px; width: 32px"></clr-icon></div>
+  <div (click)="dismissTip()" style="cursor: pointer"><clr-icon shape="times-circle" size="32px" style="position: absolute; right: 1rem; width: 32px; margin-top: .3rem"></clr-icon></div>
 </div>
 <div class="workspace-container">
   <div class="main-body">
