[RW-1022][Risk=no] Help tip/Page visit implementation (#1045)
* api part

* little more api/db + UI

* de-linting

* tweaking colors a bit

* attempting to fix test

* forgot this

* another try?

* ok, think I got it this time

* trying this while updating other code

* removing toggle, adding helptip with new implementation to notebook about page

* remove stylings no longer needed

* forgot to add this stub

* should stop being so lazy

* forgot to add profile service stub to notebook list specs

* PR comments

* remove unused variable

* small tweak

* de-linting

* addressing some PR comments

* addressing more PR comments

* fixing things

* addressing more PR comments

* clean up for codacy

* last of current PR comments

* de-linting

* addressing further pr comments

* forgot to remove this

* trying something

* reverting change

* fix?

* more PR comments

* de-linting

--- a/ui/src/app/styles/cards.css
+++ b/ui/src/app/styles/cards.css
@@ -121,24 +121,31 @@
 }
 
 .help-tip {
-  height: 128px;
-  width: 293px;
+  overflow: auto;
+  padding-bottom: .25rem;
   border: 1px solid #89CBDF;
+  margin-left: -1rem;
+  margin-right: -1rem;
   border-radius: 3px;
   background-color: #E1F1F6;
   color: #216FB4;
+  padding-left: .9rem;
+  display: flex;
+  position: relative
 }
 
 .help-tip .help-tip-title {
   border: 0px;
+  /*height: 1.375rem;*/
   font-weight: 500;
-  padding-top: 15px;
-  padding-left: 15px;
+  padding-top: .2rem;
 }
 
 .help-tip .help-tip-text {
   border: 0px;
+  /*height: 1.375rem;*/
   font-weight: 300;
-  padding-left: 15px;
+  padding-top: .2rem;
+  padding-left: .75rem;
 }
 
