--- a/ui/src/app/views/notebook-list/component.html
+++ b/ui/src/app/views/notebook-list/component.html
@@ -1,3 +1,8 @@
+<div class="help-tip" *ngIf="showTip">
+  <div class="help-tip-title">Help Tip</div>
+  <div class="help-tip-text">After creating a cohort, create a notebook to import and analyze the data from the cohort.</div>
+  <div (click)="dismissTip()" style="cursor: pointer"><clr-icon shape="times-circle" size="32px" style="position: absolute; top: .25rem; right: 1rem;height: 32px; width: 32px"></clr-icon></div>
+</div>
 <h3 class="notebooks-header">Notebooks</h3>
 <div *ngIf="notebooksLoading" class="spinner-container">
   <span class="spinner spinner-lg"></span>
@@ -20,13 +25,6 @@
         <div>Last Update<br/>{{notebook.lastModifiedTime | date}}</div>
       </div>
       <div class="item-type notebook"><div>NB</div></div>
-    </div>
-  </div>
-  <div class="help-tip" style="position: relative; top: 23px; left: 30px" *ngIf="noCohorts">
-    <div (click)="dismissTip()" style="cursor: pointer"><clr-icon shape="times" size="10px" style="position: absolute; top: 10px; right: 9px"></clr-icon></div>
-    <div class="help-tip-title">Help Tip</div>
-    <div class="help-tip-text">One of the first things you may want to do is create a cohort and then
-      create a Notebook to analyze data
     </div>
   </div>
 </div>
