--- a/ui/src/app/views/workspace/component.css
+++ b/ui/src/app/views/workspace/component.css
@@ -3,6 +3,7 @@
 }
 
 .greeting {
+  width: 89%;
   color: #2F2E7E;
   font-size: 20px;
   font-weight: 500;
@@ -65,6 +66,7 @@ h3 {
 .main-body {
   flex-grow: 1;
   margin-right: 0.6rem;
+  position: relative;
 }
 
 .right-sidebar {
@@ -166,3 +168,4 @@ app-workspace-nav-bar {
   width: 45%;
   padding-right: 5%;
 }
+
