--- a/ui/src/app/cohort-search/attributes-page/attributes-page.component.css
+++ b/ui/src/app/cohort-search/attributes-page/attributes-page.component.css
@@ -3,9 +3,6 @@
     border: 1px solid grey;
     border-radius: .2rem;
     padding-top: 0.4rem;
-    /*width:8rem;*/
-    /* background: white; */
-    /*background-color: white;*/
     margin-top:-0.2rem;
 }
 
@@ -56,19 +53,20 @@ button.btn:focus {
 }
 
 .number-container{
-    border:1px solid grey;
+    border: 1px solid #C3C3C3;;
     width: 3rem;
     height: 1.4rem;
     text-align:center;
 }
 
 .range-container {
-   padding-left: 0.2rem;
-    margin-top: -0.4rem;
+   padding-left: 0rem;
+    margin-top: -0.2rem;
 }
 
 .range-container .number-container {
-    border-radius: 0.2rem
+    border-radius: 0.2rem;
+
 }
 
 .text-padding {
@@ -81,4 +79,20 @@ button.btn:focus {
 
 .attr-name-color {
     color: #262262;
+}
+.dropdown, .dropdown .dropdown-toggle{
+    width:90%;
+}
+
+.btn-info-outline .btn, .btn-outline .btn, .btn.btn-info-outline, .btn.btn-outline, .btn.btn-outline-info, .btn.btn-outline .btn {
+    border : 1px solid #C3C3C3;
+    color: #4A4A4A;
+}
+
+.dropdown .dropdown-toggle.btn clr-icon[shape^=caret] {
+    color: #C3C3C3;
+}
+
+.dropdown-menu {
+    width:11.7rem;
 }
