--- a/ui/src/app/cohort-search/selection-info/selection-info.component.html
+++ b/ui/src/app/cohort-search/selection-info/selection-info.component.html
@@ -4,7 +4,7 @@
     [style.padding]="'0 0.25rem'"
     class="btn btn-icon btn-link btn-sm text-danger"
     (click)="remove()">
-    <clr-icon shape="close"></clr-icon>
+    <clr-icon shape="times-circle"></clr-icon>
   </button>
   <span class="item-info">
     <small *ngIf="index > 0" class="font-weight-bold">OR</small>
