RW-1088, RW-1089, RW-1090 style changes for dropdowns

--- a/ui/src/app/cohort-search/selection-info/selection-info.component.html
+++ b/ui/src/app/cohort-search/selection-info/selection-info.component.html
@@ -11,7 +11,7 @@
     <small *ngIf="parameter.get('group')" class="text-muted">Group</small>
     <small class="name">
       <strong *ngIf="parameter.get('type') !== criteriaTypes.PM && parameter.get('type') !== domainType.DRUG">{{ _type }}</strong>
-      <span class="text-muted">{{ name }}</span>
+      <span class="text-size text-muted">{{ name }}</span>
       <span class="text-muted">{{ attribute }}</span>
     </small>
   </span>
