--- a/ui/src/app/cohort-search/attributes-page/attributes-page.component.css
+++ b/ui/src/app/cohort-search/attributes-page/attributes-page.component.css
@@ -82,6 +82,7 @@ button.btn:focus {
 }
 .dropdown, .dropdown .dropdown-toggle{
     width:90%;
+    text-align:left;
 }
 
 .btn-info-outline .btn, .btn-outline .btn, .btn.btn-info-outline, .btn.btn-outline, .btn.btn-outline-info, .btn.btn-outline .btn {
