--- a/ui/src/app/cohort-search/modifier-page/modifier-page.component.css
+++ b/ui/src/app/cohort-search/modifier-page/modifier-page.component.css
@@ -1,5 +1,6 @@
 .dropdown, .dropdown .dropdown-toggle{
     width:90%;
+    text-align:left;
 }
 
 .btn-info-outline .btn, .btn-outline .btn, .btn.btn-info-outline, .btn.btn-outline, .btn.btn-outline-info, .btn.btn-outline .btn {
